# ProvenanceFlow

./: .env.example  .gitignore  README.md  USER_MANUAL.md  claude.md  dashboard.py  demo.py  packages.txt  pyproject.toml  requirements.txt  seed_db.py
.github/workflows/: ci.yml
.streamlit/: config.toml
dags/: provenanceflow_dag.py
data/raw/: gistemp_global.csv
docker/: .env  docker-compose.yaml
provenance_store/: lineage.db
src/provenanceflow/: __init__.py  cli.py  config.py  decorator.py  models.py
src/provenanceflow/api/: app.py
src/provenanceflow/api/routers/: runs.py
src/provenanceflow/ingestion/: __init__.py  base.py  generic_csv.py  local_csv.py  nasa_gistemp.py
src/provenanceflow/pipeline/: context.py  runner.py
src/provenanceflow/provenance/: compare.py  query.py  store.py  tracker.py
src/provenanceflow/utils/: checksums.py  identifiers.py  prov_helpers.py  report.py
src/provenanceflow/validation/: basic_validator.py  rule.py  rules.py  validator.py
src/provenanceflow/validation/contrib/: gistemp.py
tests/: test_api.py  test_cli.py  test_compare.py  test_config.py  test_decorator.py  test_generic_csv.py  test_ingestion.py  test_models.py  test_pipeline.py  test_pipeline_context.py  test_provenance.py  test_query.py  test_rejected_rows.py  test_report.py  test_sources.py  test_utils.py  test_validation.py
